# packages-http

./: .gitignore  CMakeLists.txt  Makefile.in  Makefile.mak  README  README.md  TODO  ax.pl  cgi_stream.c  common.mk  config.h.cmake  configure.ac  dcg_basics.pl  graphql.pl  html_decl.pl  html_head.pl  html_quasiquotations.pl  html_write.pl  htmx.pl  http.doc  http.plx  http_authenticate.pl  http_chunked.c  http_client.pl  http_cookie.pl  http_cors.pl  http_digest.pl  http_dirindex.pl  http_dispatch.pl  http_dyn_workers.pl  http_error.c  http_error.pl  http_exception.pl  http_files.pl  http_header.pl  http_hook.pl  http_hooks.pl  http_host.pl  http_json.pl  http_load.pl  (+52 more)
examples/: README  README.md  custom_404.pl  debian-init-script  demo_body.pl  demo_client.pl  demo_daemon.pl  demo_digest.pl  demo_inetd  demo_openid.pl  demo_rest.pl  demo_threads.pl  demo_xpce.pl  passwd  stress_client.pl  stress_server.pl  systemd-script.service
graphql/: exec.pl  read.pl  write.pl
web/css/: openid.css
